top section add

--- a/index.html
+++ b/index.html
@@ -5,9 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear</title>
+    <!-- font awesome link  -->
+    <script src="https://kit.fontawesome.com/19a67e76c1.js" crossorigin="anonymous"></script>
+    <!-- custom css link -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>hi this is mehedi hassan</h1>
+    <!-- header area htl start here  -->
+    <header>
+
+    </header>
+    <!-- header area end here  -->
+
+    <!-- top section html start here  -->
+    <section class="top-section container">
+        <div class="banner-item">
+        <h2>Start your Journey as Influencer</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt voluptatem necessitatibus harum iure officia eius explicabo,</p>
+        <a class="button-style" href="">Preebook Now <i class="fas fa-arrow-right"></i></a>
+        </div>
+        <div id="banner-image" class="banner-item">
+            <img src="images/main-camera.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
