header area add

--- a/index.html
+++ b/index.html
@@ -12,8 +12,23 @@
 </head>
 <body>
     <!-- header area htl start here  -->
-    <header>
-
+    <header class="container">
+        <div class="main-header">
+            <div class="logo">
+                <h2>Influencer products</h2>
+            </div>
+            <div class="menu-bar">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Sign up</a></li>
+                    <li><a href="#">Log In</a></li>
+                   
+                    <li><a href="#"><i class="fas fa-search"></i></a></li>
+                    <li><a href="#"><i class="fas fa-cart-arrow-down"></i></a></li>
+                </ul>
+            </div>
+        </div>
     </header>
     <!-- header area end here  -->
 
