--- a/index.html
+++ b/index.html
@@ -282,5 +282,41 @@
             </div>
         </div>
     </section>
+
+    <!-- collection area html end  -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- footer area html start here  -->
+    <footer class=" footer-area">
+        <div class="footer-title">
+            <h2>Influencer products</h2>
+            <p>Copyright &#169; 2022 influencer products</p>
+            <p>All rights reserved</p>
+        </div>
+        <div class="footer-icon">
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-instagram-square"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-linkedin-in"></i>
+        </div>
+    </footer>
+    <!-- footer area html end here 
+     -->
 </body>
 </html>
