--- a/index.html
+++ b/index.html
@@ -297,7 +297,21 @@
     <!-- collection area html end  -->
 
 
+<!-- our campping -->
 
+<section class="margin-y">
+    <div class="campping-title collection-title"><h2>Our Campping</h2></div>
+    <div class="camppings">
+        <div class="campping-image">
+            <img src="images/campping.jpg" alt="Campping image">
+        </div>
+        <div class="campping-text">
+            <h3>Camera Camping</h3>
+            <p>Capturing those authentic memories will mean more to you than the most perfect landscape image. Capture the moments that you want to hold on to forever: the ones you can look back on in years to come that will bring a smile to your face and remind you of the way things smelt, felt and looked.</p>
+        </div>
+        
+    </div>
+</section>
 
 
 
